--- a/drivers/gud/gud-exynos7420/Makefile
+++ b/drivers/gud/gud-exynos7420/Makefile
@@ -32,10 +32,10 @@ MOBICORE_PLATFORM := $(shell (ls -1 $(GUD_ROOT_FOLDER)/MobiCoreDriver/platforms 
 # Use the available platform folder
 ccflags-y += -I$(GUD_ROOT_FOLDER)/MobiCoreDriver/platforms/$(MOBICORE_PLATFORM)
 # MobiCore Driver includes
-ccflags-y += -I$(GUD_ROOT_FOLDER)/MobiCoreDriver/public
+ccflags-y += -I$(srctree)/$(GUD_ROOT_FOLDER)/MobiCoreDriver/public
 # MobiCore KernelApi required includes
-ccflags-y += -I$(GUD_ROOT_FOLDER)/MobiCoreKernelApi/include \
-		-I$(GUD_ROOT_FOLDER)/MobiCoreKernelApi/public
+ccflags-y += -I$(srctree)/$(GUD_ROOT_FOLDER)/MobiCoreKernelApi/include \
+		-I$(srctree)/$(GUD_ROOT_FOLDER)/MobiCoreKernelApi/public
 
 obj-$(CONFIG_SECURE_OS_CONTROL) += sec-os-ctrl/
 obj-$(CONFIG_SECURE_OS_BOOSTER_API) += sec-os-booster/
