zero: append boot dts

--- a/arch/arm64/configs/lineageos_zerofltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zerofltexx_defconfig
@@ -451,7 +451,9 @@ CONFIG_SECCOMP=y
 # Boot options
 #
 CONFIG_CMDLINE=""
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7420-zeroflte_eur_open_06"
+CONFIG_ARM64_APPENDED_DTB=y
 
 #
 # Userspace binary formats
