--- a/arch/arm64/configs/lineageos_zerofltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zerofltexx_defconfig
@@ -2738,7 +2738,7 @@ CONFIG_LCD_HBM_INTERPOLATION=y
 CONFIG_PANEL_AID_DIMMING=y
 # CONFIG_LCD_DOZE_MODE is not set
 # CONFIG_PANEL_S6E3HF2_DYNAMIC is not set
-# CONFIG_PANEL_S6E3HA2_DYNAMIC is not set
+CONFIG_PANEL_S6E3HA2_DYNAMIC=y
 # CONFIG_PANEL_S6E3HA3_DYNAMIC is not set
 # CONFIG_PANEL_S6E3HF3_DYNAMIC is not set
 # CONFIG_PANEL_S6E3FA3_A8XE is not set
