--- a/arch/arm64/configs/lineageos_zerofltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zerofltexx_defconfig
@@ -514,7 +514,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_MODE_AUTO_CHANGE=y
+# CONFIG_MODE_AUTO_CHANGE is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
