--- a/arch/arm64/configs/lineageos_zerofltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zerofltexx_defconfig
@@ -541,7 +541,8 @@ CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
 CONFIG_MODE_AUTO_CHANGE=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
-
+CONFIG_EXYNOS7420_CPU_UNDERCLOCK=y
+CONFIG_EXYNOS7420_CPU_OVERCLOCK=y
 
 #
 # ARM CPU frequency scaling drivers
