--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -441,7 +441,6 @@ config GENERIC_CPUFREQ_CPU0
 
 	  If in doubt, say N.
 
-<<<<<<< HEAD
 config CPU_FREQ_GOV_BIOSHOCK
 	tristate "'bioshock' cpufreq bioshock"
 	depends on CPU_FREQ
@@ -459,19 +458,17 @@ config CPU_FREQ_GOV_HYPER
 	'hyper' - A tweaked "ondemand" based smart and smooth optimized governor!
 	If in doubt, say N.
 
-=======
-config G92X_CPU_UNDERCLOCK
-	bool "Exynos7420 min cpu frequenz"
+config EXYNOS7420_CPU_UNDERCLOCK
+	bool "Unlock Exynos7420 minimal CPU frequency"
 	depends on ARM_EXYNOS7420_CPUFREQ
 	help
-	   Sets Apollo and Atlas clusters to min cpu frequenz
+	   Unlocks minimal CPU frequency for both A53 and A57-clusters 
 	   
-config G92X_CPU_OVERCLOCK
-	bool "Exynos7420 max cpu frequenz"
+config EXYNOS7420_CPU_OVERCLOCK
+	bool "Unlock Exynos7420 maximal CPU frequency"
 	depends on ARM_EXYNOS7420_CPUFREQ
 	help
-	   Sets Apollo and Atlas clusters to max cpu frequenz
->>>>>>> 5982ebb... drivers: use clocker for uc or oc
+	   Unlocks maximal CPU frequency for both A53 and A57-clusters 
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
