--- a/arch/arm64/configs/lineageos_zeroltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zeroltexx_defconfig
@@ -2303,7 +2303,7 @@ CONFIG_EXYNOS_THERMAL=y
 # CONFIG_EXYNOS_SWTRIP is not set
 CONFIG_CPU_THERMAL_IPA=y
 CONFIG_CPU_THERMAL_IPA_CONTROL=y
-CONFIG_CPU_THERMAL_CRITICAL_SHUTDOWN=y
+# CONFIG_CPU_THERMAL_CRITICAL_SHUTDOWN is not set
 # CONFIG_CPU_THERMAL_CRITICAL_EMERGENCY_SHUTDOWN is not set
 # CONFIG_CPU_THERMAL_IPA_DEBUG is not set
 
