--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -202,4 +202,43 @@ source "drivers/hwtracing/intel_th/Kconfig"
 
 source "drivers/fpga/Kconfig"
 
+###########################################
+# Samsung device and hardware drivers
+#####
+source "drivers/battery/Kconfig"
+
+source "drivers/battery_v2/Kconfig"
+
+source "drivers/bts/Kconfig"
+
+source "drivers/esoc/Kconfig"
+
+source "drivers/fingerprint/Kconfig"
+
+source "drivers/gator/Kconfig"
+
+source "drivers/gps/Kconfig"
+
+source "drivers/gud/Kconfig"
+
+source "drivers/ledmatrix/Kconfig"
+
+source "drivers/mhi/Kconfig"
+
+source "drivers/motor/Kconfig"
+
+source "drivers/muic/Kconfig"
+
+source "drivers/sensorhub/stm/Kconfig"
+
+source "drivers/sensorhub/atmel/Kconfig"
+
+source "drivers/sensorhub/brcm/Kconfig"
+
+source "drivers/sensorhub/stm32/Kconfig"
+
+source "drivers/sensors/Kconfig"
+
+source "drivers/switch/Kconfig"
+
 endmenu
