--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -5,6 +5,7 @@
 menu "Character devices"
 
 source "drivers/tty/Kconfig"
+source "drivers/char/diag/Kconfig"
 
 config DEVMEM
 	bool "/dev/mem virtual device support"
@@ -574,6 +575,10 @@ config DEVPORT
 	bool
 	depends on ISA || PCI
 	default y
+	
+config DCC_TTY
+	tristate "DCC tty driver"
+	depends on ARM
 
 source "drivers/s390/char/Kconfig"
 
