--- a/arch/arm64/configs/lineageos_zerolte-na_defconfig
+++ b/arch/arm64/configs/lineageos_zerolte-na_defconfig
@@ -254,12 +254,12 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_BFQ=y
+# CONFIG_IOSCHED_BFQ is not set
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_DEADLINE is not set
+# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_NOOP=y
-CONFIG_DEFAULT_CFQ=y		
-CONFIG_DEFAULT_IOSCHED="bfq"
+CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
