--- a/arch/arm64/configs/lineageos_zeroltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zeroltexx_defconfig
@@ -107,7 +107,7 @@ CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
-CONFIG_CPUSETS=y
+# CONFIG_CPUSETS is not set
 # CONFIG_PROC_PID_CPUSET is not set
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
@@ -384,7 +384,7 @@ CONFIG_HMP_FAST_CPU_MASK="4-7"
 CONFIG_HMP_SLOW_CPU_MASK="0-3"
 CONFIG_HMP_VARIABLE_SCALE=y
 CONFIG_HMP_FREQUENCY_INVARIANT_SCALE=y
-# CONFIG_SCHED_HMP_LITTLE_PACKING is not set
+CONFIG_SCHED_HMP_LITTLE_PACKING=y
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 CONFIG_LOCAL_TIMERS=y
