--- a/arch/arm64/configs/lineageos_zeroltexx_defconfig
+++ b/arch/arm64/configs/lineageos_zeroltexx_defconfig
@@ -522,6 +522,7 @@ CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_INTERGALACTIC=y
 CONFIG_CPU_FREQ_GOV_INTEREXTREM=y
 CONFIG_CPU_FREQ_GOV_KTOONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
