zero: updated defconfigs

--- a/arch/arm64/configs/lineageos_zerofltecan_defconfig
+++ b/arch/arm64/configs/lineageos_zerofltecan_defconfig
@@ -254,12 +254,12 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 #
 # IO Schedulers
 #
-# CONFIG_IOSCHED_BFQ is not set
+CONFIG_IOSCHED_BFQ
 CONFIG_IOSCHED_CFQ=y
-# CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_IOSCHED_DEADLINE
 CONFIG_IOSCHED_NOOP=y
-CONFIG_DEFAULT_CFQ=y
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_BFQ=y
+CONFIG_DEFAULT_IOSCHED="bfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -509,35 +509,35 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-# CONFIG_CPU_FREQ_GOV_ALUCARD is not set
-# CONFIG_CPU_FREQ_GOV_BIOSHOCK is not set
-# CONFIG_CPU_FREQ_GOV_BLUACTIVE is not set
-# CONFIG_CPU_FREQ_GOV_CAFACTIVE is not set
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_BLUACTIVE=y
+CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVEX is not set
-# CONFIG_CPU_FREQ_GOV_DANCEDANCE is not set
-# CONFIG_CPU_FREQ_GOV_DARKNESS is not set
-# CONFIG_CPU_FREQ_GOV_HYPER is not set
-# CONFIG_CPU_FREQ_GOV_IMPULSE is not set
-# CONFIG_CPU_FREQ_GOV_INTELLIMM is not set
-# CONFIG_CPU_FREQ_GOV_INTELLIACTIVE is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_HYPER=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-# CONFIG_CPU_FREQ_GOV_INTEREXTREM is not set
-# CONFIG_CPU_FREQ_GOV_KTOONSERVATIVE is not set
-# CONFIG_CPU_FREQ_GOV_LIONHEART is not set
-# CONFIG_CPU_FREQ_GOV_NIGHTMARE is not set
+CONFIG_CPU_FREQ_GOV_INTEREXTREM=y
+CONFIG_CPU_FREQ_GOV_KTOONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS is not set
-# CONFIG_CPU_FREQ_GOV_PEGASUSQ is not set
+CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-# CONFIG_CPU_FREQ_GOV_PRESERVATIVE is not set
-# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
-# CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS is not set
-# CONFIG_CPU_FREQ_GOV_UMBRELLA_CORE is not set
+CONFIG_CPU_FREQ_GOV_PRESERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
+CONFIG_CPU_FREQ_GOV_UMBRELLA_CORE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-# CONFIG_CPU_FREQ_GOV_WAVE is not set
-# CONFIG_CPU_FREQ_GOV_WHEATLEY is not set
+CONFIG_CPU_FREQ_GOV_WAVE=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_MODE_AUTO_CHANGE=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
