--- a/arch/arm64/configs/lineageos_zeroltecan_defconfig
+++ b/arch/arm64/configs/lineageos_zeroltecan_defconfig
@@ -254,9 +254,9 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_BFQ
+CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_DEADLINE
+CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_DEFAULT_BFQ=y
 CONFIG_DEFAULT_IOSCHED="bfq"
