selinux: allow to enforce "Enforcing"- or "Permissive"-state

--- a/security/selinux/Kconfig
+++ b/security/selinux/Kconfig
@@ -131,3 +131,25 @@ config SECURITY_SELINUX_POLICYDB_VERSION_MAX_VALUE
 	  installed under /etc/selinux/$SELINUXTYPE/policy, where
 	  SELINUXTYPE is defined in your /etc/selinux/config.
 
+config SECURITY_SELINUX_ALWAYS_ENFORCE
+	bool "NSA SELinux always use Enforced"
+	depends on SECURITY_SELINUX
+	default n
+	help
+	  Always use the "Enforced"-state, ignoring any changes requested
+	  by the user or the kernel
+
+config SECURITY_SELINUX_ALWAYS_PERMISSIVE
+	bool "NSA SELinux always use Permissive"
+	depends on SECURITY_SELINUX
+	default n
+	help
+	  Always use the "Permissive"-state, ignoring any changes requested
+	  by the user or the kernel
+
+config SECURITY_SELINUX_PRETEND_ENFORCE
+	bool "NSA SELinux pretend to be Enforced"
+	depends on SECURITY_SELINUX
+	default n
+	help
+	  Pretends to use the "Enforced"-state, regarding the current state
