--- a/security/selinux/Kconfig
+++ b/security/selinux/Kconfig
@@ -131,6 +131,13 @@ config SECURITY_SELINUX_POLICYDB_VERSION_MAX_VALUE
 	  installed under /etc/selinux/$SELINUXTYPE/policy, where
 	  SELINUXTYPE is defined in your /etc/selinux/config.
 
+config SECURITY_SELINUX_DEFAULT_ENFORCE
+	bool "NSA SELinux use Enforced as default"
+	depends on SECURITY_SELINUX
+	default n
+	help
+	  Uses "Enforced" as the state while initializing
+
 config SECURITY_SELINUX_ALWAYS_ENFORCE
 	bool "NSA SELinux always use Enforced"
 	depends on SECURITY_SELINUX
@@ -138,6 +145,13 @@ config SECURITY_SELINUX_ALWAYS_ENFORCE
 	help
 	  Always use the "Enforced"-state, ignoring any changes requested
 	  by the user or the kernel
+
+config SECURITY_SELINUX_DEFAULT_PERMISSIVE
+	bool "NSA SELinux use Permissive as default"
+	depends on SECURITY_SELINUX
+	default n
+	help
+	  Uses "Permissive" as the state while initializing
 
 config SECURITY_SELINUX_ALWAYS_PERMISSIVE
 	bool "NSA SELinux always use Permissive"
