--- a/security/selinux/Makefile
+++ b/security/selinux/Makefile
@@ -2,8 +2,16 @@
 # Makefile for building the SELinux module as part of the kernel tree.
 #
 
+ifeq ($(CONFIG_SECURITY_SELINUX_DEFAULT_PERMISSIVE),y)
+EXTRA_CFLAGS += -DSELINUX_DEFAULT_PERMISSIVE=true
+endif
+
 ifeq ($(CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE),y)
 EXTRA_CFLAGS += -DSELINUX_ALWAYS_PERMISSIVE=true
+endif
+
+ifeq ($(CONFIG_SECURITY_SELINUX_DEFAULT_ENFORCE),y)
+EXTRA_CFLAGS += -DSELINUX_DEFAULT_ENFORCE=true
 endif
 
 ifeq ($(CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE),y)
